# MiniCompleteProject

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.py  format-code.py  localbuild.py  main.cpp
cmake/: clang-cxx-dev-tools.cmake  common.cmake  gcc-weverything.cmake  memory-check.cmake
doc/: description.md
docker/alpine-linux/: Dockerfile
docker/ubuntu-trusty/: Dockerfile
test/: CMakeLists.txt  hello_world.cpp
